# adm_gestao_dmn

./: .mailmap  1_MASTER_PROMPT_REFATORACAO_CURSOS.md  404.html  README.md  build_log_final_4.txt  course.yml  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  test_output_final.txt  test_output_final_v2.txt
.github/workflows/: documentation.yaml  test.yml
_legado/: index.html
assets/: quiz.html
assets/css/: quiz.css
audit/: index.html
aulas/: index.html
aulas/aula-01/: index.html
aulas/aula-02/: index.html
aulas/aula-03/: index.html
aulas/aula-04/: index.html
aulas/aula-05/: index.html
aulas/aula-06/: index.html
aulas/aula-07/: index.html
aulas/aula-08/: index.html
aulas/aula-09/: index.html
aulas/aula-10/: index.html
aulas/aula-11/: index.html
aulas/aula-12/: index.html
aulas/aula-13/: index.html
aulas/aula-14/: index.html
aulas/aula-15/: index.html
aulas/aula-16/: index.html
docs/: audit.md  index.md  materiais.md  plano.md  sobre.md
docs/aulas/: aula-01.md  aula-02.md  aula-03.md  aula-04.md  aula-05.md  aula-06.md  aula-07.md  aula-08.md  aula-09.md  aula-10.md  aula-11.md  aula-12.md  aula-13.md  aula-14.md  aula-15.md  aula-16.md  index.md
docs/exercicios/: exercicio-01.md  exercicio-02.md  exercicio-03.md  exercicio-04.md  exercicio-05.md  exercicio-06.md  exercicio-07.md  exercicio-08.md  exercicio-09.md  exercicio-10.md  exercicio-11.md  exercicio-12.md  exercicio-13.md  exercicio-14.md  exercicio-15.md  exercicio-16.md  index.md  solucao-01.md  solucao-02.md  solucao-03.md  solucao-04.md  solucao-05.md  solucao-06.md  solucao-07.md  solucao-08.md  solucao-09.md  solucao-10.md  solucao-11.md  solucao-12.md  solucao-13.md  solucao-14.md  solucao-15.md  solucao-16.md
docs/projetos/: index.md  projeto-01.md  projeto-02.md  projeto-03.md  projeto-04.md  projeto-05.md  projeto-06.md  projeto-07.md  projeto-08.md  projeto-09.md  projeto-10.md  projeto-11.md  projeto-12.md  projeto-13.md  projeto-14.md  projeto-15.md  projeto-16.md  projeto-referencia.md
docs/quizzes/: index.md  quiz-01.md  quiz-02.md  quiz-03.md  quiz-04.md  quiz-05.md  quiz-06.md  quiz-07.md  quiz-08.md  quiz-09.md  quiz-10.md  quiz-11.md  quiz-12.md  quiz-13.md  quiz-14.md  quiz-15.md  quiz-16.md
docs/setups/: index.md  setup-01.md  setup-02.md  setup-03.md
estavel/: 404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  sitemap.xml
exercicios/: index.html
hooks/: __init__.py  copy_slides.py
logs/: agnostic_test_v2.txt  agnostic_test_v3.txt  build_final.txt  build_log.txt  build_log2.txt  build_log3.txt  build_log_final.txt  build_log_final_2.txt  build_log_final_3.txt  build_log_final_5.txt  build_log_final_6.txt  build_log_final_7.txt  build_log_final_8.txt  build_log_final_9.txt  current_build.txt  current_build2.txt  project_roadmap_bak.md  test_output.txt  test_output_v3.txt  test_report_final.txt  test_report_final_v3.txt  test_report_final_v4.txt  test_results.txt  test_results_v10.txt  test_results_v8.txt  test_results_v9.txt  ui_audit_data.json  ui_audit_report.md
materiais/: index.html
overrides/: home.html
plano/: index.html
print_page/: index.html
projetos/: index.html
quizzes/: index.html
scripts/: build_exercises.py  content_overlay.json  convert_quizzes.py  generate_slides_quizzes.py  refactor_aulas.py  unified_audit.py
search/: search_index.json
setups/: index.html
slides/: index.html  slide-01.html  slide-01.md  slide-02.html  slide-03.html  slide-04.html  slide-05.html  slide-06.html  slide-07.html  slide-08.html  slide-09.html  slide-10.html  slide-10.md  slide-11.html  slide-12.html  slide-13.html  slide-14.html  slide-15.html  slide-16.html  slide-pro.html  slide-test-v2.html  slide-test.html  slide-test.md
sobre/: index.html
tests/: test_course_structure.py  test_fullscreen.py  test_layout.py  test_mermaid_syntax.py  test_navigation.py  test_slide_build.py
(+335 files in other folders)
