
# =============================================================
# Gestão e Modelos de Negócios
# Gerado automaticamente — NÃO EDITE MANUALMENTE
# Edite course.yml e execute: python sync_repos.py --generate .
# =============================================================

[tool.poetry]
name = "adm_gestao_dmn"
version = "0.1.0"
description = "Curso completo de Gestão e Modelos de Negócios para Análise e Desenvolvimento de Sistemas"
authors = ["ricardotecpro"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
mkdocs = ">=1.6.1,<2.0"
mkdocs-material = {version = ">=9.6.21", extras = ["imaging"]}
mkdocs-glightbox = ">=0.5.1"
mkdocs-quiz = ">=0.0.41"
mkdocs-macros-plugin = ">=1.4.0"
mkdocs-git-authors-plugin = ">=0.10.0"
mkdocs-git-revision-date-localized-plugin = ">=1.4.7"
mike = ">=2.1.3"
pillow = ">=11.3.0"
pymdown-extensions = ">=10.0.0"
mkdocs-simple-hooks = ">=0.1.5"
mkdocs-revealjs = ">=0.3.0"
mkdocs-jupyter = ">=0.25.0"
mkdocs-video = ">=1.5.0"
mkdocs-rss-plugin = ">=1.15.0"
mkdocs-print-site-plugin = ">=2.4.0"
termynal = ">=0.2.0"
mkdocs-awesome-pages-plugin = ">=2.9.0"

[tool.poetry.group.dev.dependencies]
invoke = ">=2.2.0"
rich = ">=14.1.0"
taskipy = ">=1.14.1"
pytest = ">=8.0.0"
pytest-playwright = ">=0.5.0"
playwright = ">=1.40.0"
ruff = "*"

[tool.taskipy.tasks]
docs = "mkdocs serve"
serve = "mkdocs serve --dev-addr 0.0.0.0:8000"
build = "mkdocs build"
slides = {cmd="python scripts/generate_slides_quizzes.py", help="Gera slides HTML"}
quizzes = {cmd="python scripts/convert_quizzes.py", help="Gera quizzes interativos"}
deploy = "mkdocs gh-deploy --force"
test = "pytest tests/ -v --timeout=30"
check = "python scripts/check_content.py"
audit = {cmd="python scripts/unified_audit.py .", help="Relatório de auditoria unificado"}
clean = "python -c \"import shutil; [shutil.rmtree(d, True) for d in ['site', '.cache']]\""

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
